--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ input:focus {
   box-shadow: 0px 0px 5px, gray;
   margin: auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 80%;
   height: 20rem;
   display: grid;
@@ -185,6 +186,8 @@ input:focus {
   text-align: center;
   height: 300px;
   width: 300px;
+  margin: 15px;
+  margin-bottom: 15px;
 }
 
 .product-image img {
