--- a/view.css
+++ b/view.css
@@ -1,85 +1,78 @@
-body {
-    background-color: rgba(0, 0, 0, 0.4);
+.product {
+  background-color: rgb(247, 244, 242);
+  border: 2px solid gray;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px, gray;
+  margin: auto;
+  width: 80%;
+  height: 40rem;
+  
+  margin-top: 12vh;
+  
 }
 
+.header {
+  background-color: blue;
+  color: white;
+  height: 4rem;
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px 10px 0px 0px;
+}
 
-#add-popup {
-    border-radius: 10px;
-    box-shadow: 0px 0px 5px grey;
-    text-align: center;
-    width: 40%;
-    margin: auto;
-    margin-top: 25vh;
-    z-index: 100;
-    
-    position: relative;
-    background-color: white;
-  }
+.description {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin: 30px;
+}
 
-  
-  .heading {
-    background-color: blue;
-    color: white;
-    height: 4rem;
-    font-size: 2rem;
-    font-weight: 600;
+.image {
     display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 10px 10px 0px 0px;
-  }
-  
-  #add-popup label {
+    align-items: center;
+}
+.description img {
+    height: 30rem;
+    
+}
+
+.text {
+    text-align: center;
+}
+
+.text h1 {
+    font-size: 2.5rem;
+}
+
+.text h5 {
     font-size: 1.5rem;
-    color: rgb(114, 111, 111);
-    font-weight: 600;
-    float: left;
-    margin-left: 35px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-  }
-  
-  input {
-    font-size: 1.5rem;
-    width: 90%;
-  }
-  
-  input:focus {
-    background-color: rgb(239, 242, 245);
-  }
-  
-  .buttons {
-    display: flex;
-    justify-content: flex-end;
-    margin: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .add-btn {
-    background-color: blue;
+}
+
+.text p {
+    color: gray;
+}
+
+.btn {
+    
     color: white;
     font-size: 1.5rem;
     padding: 7px;
     border: none;
     margin-right: 27px;
     cursor: pointer;
-  }
-  
-  .cancel-btn {
-    background: transparent;
-    color: blue;
-    font-size: 1.5rem;
-    margin-right: 10px;
-    padding: 5px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .add-btn:hover {
-    background-color: orange;
-  }
-  
-  .cancel-btn:hover {
-    background-color: rgb(181, 218, 228);
-  }
-  
+}
+
+.edit {
+    background-color: green;
+}
+
+.delete {
+    background-color: red;
+}
+
+.close {
+    background-color: blue;
+}
